# MagneticReadoutProcessing

./: .buildinfo  .gitattributes  .gitignore  .readthedocs.yaml  MagneticReadoutProcessing.html  README.md  RotationalSensorProxy.html  UserDefinedProcessingPipeline.html  cli.html  dataflow.bmpr  examples.html  genindex.html  index.html  installation.html  intro.html  modules.html  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py
src/MagneticReadoutProcessing/: .gitignore  Dockerfile  MRPAnalysis.py  MRPBaseSensor.py  MRPDataVisualization.py  MRPHal.py  MRPMeasurementConfig.py  MRPPolarVisualization.py  MRPReading.py  MRPReadingEntry.py  MRPReadoutSource.py  MRPVisualization.py  MRPcliglobal_config.json  cli.py  demo_cIDX0.mag.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/MagneticReadoutProcessing/MRP/: MRPAnalysis.py  MRPBaseSensor.py  MRPDataVisualization.py  MRPHal.py  MRPHalHelper.py  MRPHalKlipper.py  MRPHalLocal.py  MRPHalRest.py  MRPHalSerialPortInformation.py  MRPHallbachArrayGenerator.py  MRPMeasurementConfig.py  MRPMoonrakerInterface.py  MRPOpenSCADGenerator.py  MRPPHalRestRequestResponseState.py  MRPPolarVisualization.py  MRPReading.py  MRPReadingEntry.py  MRPReadingSource.py  MRPReadingSourceFullsphere.py  MRPReadingSourceStatic.py  MRPRotationalSensor.py  MRPSimulation.py  requirements.txt
src/MagneticReadoutProcessing/MRPRotationalSensorProxy/: __init__.py  __main__.py  moonraker.py  rsp.py  rsp_proxy.py
src/MagneticReadoutProcessing/MRPcli/: cli_config.py  (+4 more)
(+1428 files in other folders)
