[options]
install_requires = file: requirements.txt
include_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
* =
    *.mag.json
    *.yaml
    *.html
    *.js
    *.css
    *.md
    *.json
    *.ts
    *.xml

[options.entry_points]
console_scripts =
    MRPCli = MRPcli:main
    MRPUDPP = MRPudpp:main